--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       </div>
     </nav>
     <aside>
-      <p>Copyright © {new Date().getFullYear()} - All right reserved by ACME Industries Ltd</p>
+      <p>Copyright © 2024 - All right by Ridzz Dev</p>
     </aside>
   </footer>
 </html>
