--- a/pakaian.html
+++ b/pakaian.html
@@ -1,40 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Affiliate Product</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/daisyui@latest/dist/full.min.css" rel="stylesheet" type="text/css" />
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/daisyui@2.15.0/dist/full.min.js"></script>
-        <script src="script/script.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/pagedone@1.2.2/src/css/pagedone.css" rel="stylesheet"/>
-        <link href="style/index.css" rel="stylesheet" />
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Affiliate Product</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@latest/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/daisyui@2.15.0/dist/full.min.js"></script>
+    <script src="script/script.js"></script>
+    <link href="/style/index.css" rel="stylesheet"
+</head>
 <body class="bg-blue-100">
     <!-- Navbar -->
-    <div class="navbar bg-base-100">
-        <div class="flex-1" style="margin-left:px;"> <!-- Ubah 20px sesuai kebutuhan -->
-          <a class="btn btn-ghost text-xl">Ridzz Store</a>
+    <!-- Navbar -->
+<!-- Navbar -->
+<div class="navbar bg-base-100">
+    <div class="navbar-start">
+        <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </div>
+            <ul tabindex="0" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                <li><a href="index.html">Home</a></li>
+
+                <!-- Dropdown untuk Fashion -->
+                <li class="dropdown">
+                    <a class="justify-between" href="#" onclick="toggleSubMenu(event)">
+                        Fashion
+                        <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M19 9l-7 7-7-7"></path>
+                        </svg>
+                    </a>
+                    <ul class="menu menu-sm p-2 bg-base-100 hidden">
+                        <li><a href="pakaian.html">Pakaian</a></li>
+                        <li><a href="aksesoris.html">Aksesoris</a></li>
+                    </ul>
+                </li>
+
+                <!-- Dropdown untuk Peralatan Rumah -->
+                <li class="dropdown">
+                    <a class="justify-between" href="#" onclick="toggleSubMenu(event)">
+                        Peralatan Rumah
+                        <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M19 9l-7 7-7-7"></path>
+                        </svg>
+                    </a>
+                    <ul class="menu menu-sm p-2 bg-base-100 hidden">
+                        <li><a href="assets/produk-rumah/sapu.html">Sapu Lantai</a></li>
+                        <li><a href="gpu.html">Vacuum Cleaner</a></li>
+                        <li><a href="rice-cooker.html">Rice Cooker</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="#">Tentang Kami</a></li>
+            </ul>
         </div>
-        <div class="flex-none">
-          <ul class="menu menu-horizontal px-1">
-            <li>
-              <details>
-                <summary><b>Produk</b></summary>
-                <ul class="bg-base-100 rounded-t-none p-2">
-                  <li><a>Kecantikan</a></li>
-                  <li><a>Aksesoris</a></li>
-                  <li><a>Pakaian</a></li>
-                </ul>
-              </details>
-            </li>
-          </ul>
-        </div>
-      </div>
-      
+    </div>
+
+    <div class="navbar-center">
+        <a class="btn btn-ghost text-xl">Ridzz Store</a>
+    </div>
+
+    <div class="navbar-end">
+        <button class="btn btn-ghost btn-circle">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+        </button>
+        <button class="btn btn-ghost btn-circle">
+            <div class="indicator">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+                </svg>
+                <span class="badge badge-xs badge-primary indicator-item"></span>
+            </div>
+        </button>
+    </div>
+</div>
 <!-- Produk -->
 <div id="product-list" class="container mx-auto px-4 py-8">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -174,20 +221,9 @@
                         <span class="text-lg sm:text-2xl font-bold text-gray-800 line-through">Rp 299.000</span>
                         <p class="text-lg sm:text-2xl font-bold text-green-600">Rp 99.000</p>
                     </div>
-                    <!-- Open the modal using ID.showModal() method -->
-               <button class="btn" onclick="my_modal_5.showModal()">Pesan Sekarang</button>
-           <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
-        <div class="modal-box">
-    <h3 class="text-lg font-bold">Haloo!</h3>
-<p class="py-4">Maaf kak untuk sekarang lagi ada kendala, langsung ke tokonya aja ya</p>
-    <div class="modal-action">
-      <form method="dialog">
-        <!-- if there is a button in form, it will close the modal -->
-        <button class="btn">Oke..</button>
-      </form>
-    </div>
-  </div>
-</dialog>
+                    <div class="flex items-center justify-between mt-4">
+                        <button class="btn w-full px-6 py-3 bg-green-500 text-white hover:bg-green-700 mb-4" id="myButton3">Pesan Sekarang</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -202,7 +238,7 @@
         <a href="https://www.tokopedia.com" target="_blank" class="child-option">
             <img src="assets/logo-tokopedia.png" alt="Tokopedia">
         </a>
-        <a href="https://wa.me/62812" target="_blank" class="child-option">
+        <a href="https://wa.me/1234567890" target="_blank" class="child-option">
             <i class="fab fa-whatsapp fa-lg" style="color: #25D366;"></i>
         </a>
     </div>
